--- a/profile.html
+++ b/profile.html
@@ -149,7 +149,7 @@
 		<div class="row">
 			<div class="col m12 company-header">
 				<div class="cover-image">
-					<img class="img-full" src="images/cover-images/cover-image.jpg">
+					<!--<img class="img-full" src="images/cover-images/cover-image.jpg">-->
 					<div class="box-shadow-image"></div>
 					<div class="update-cover-image">
 						<div class="item-icon"><i class="material-icons color-white">photo_camera</i></div>
@@ -214,13 +214,13 @@
 											</a>
 										</span>
 									</span>
-									<div class="endorsing" id="endorsing1">
-										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing1');" onmouseover="generaterMouseOver('endorsing1');" onclick="generaterClickEndorse('endorsing1', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
+									<div class="endorsing" id="endorsing-1">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing-1');" onmouseover="generaterMouseOver('endorsing-1');" onclick="generaterClickEndorse('endorsing-', 'endorse-plus', 'endorse-minus', 1);"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
 										</span>
-										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing1');" onmouseover="generaterMouseOver('endorsing1');" onclick="generaterClickEndorse('endorsing1', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing-1');" onmouseover="generaterMouseOver('endorsing-1');" onclick="generaterClickEndorse('endorsing-', 'endorse-minus', 'endorse-plus', 1);"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
 									</div>
 									<div class="endorsers-container">
-										<ul class="endorsers-pics">
+										<ul class="endorsers-pics" id="endorsers-pics-1">
 											<li>
 												<span>
 													<img src="images/avatar-images/avatar.png">
@@ -264,13 +264,13 @@
 											</a>
 										</span>
 									</span>
-									<div class="endorsing" id="endorsing2">
-										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing2');" onmouseover="generaterMouseOver('endorsing2');" onclick="generaterClickEndorse('endorsing2', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
+									<div class="endorsing" id="endorsing-2">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing-2');" onmouseover="generaterMouseOver('endorsing-2');" onclick="generaterClickEndorse('endorsing-', 'endorse-plus', 'endorse-minus', 2);"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
 										</span>
-										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing2');" onmouseover="generaterMouseOver('endorsing2');" onclick="generaterClickEndorse('endorsing2', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing-2');" onmouseover="generaterMouseOver('endorsing-2');" onclick="generaterClickEndorse('endorsing-', 'endorse-minus', 'endorse-plus', 2);"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
 									</div>
 									<div class="endorsers-container">
-										<ul class="endorsers-pics">
+										<ul class="endorsers-pics" id="endorsers-pics-2">
 											<li>
 												<span>
 													<img src="images/avatar-images/avatar.png">
@@ -313,13 +313,13 @@
 											</a>
 										</span>
 									</span>
-									<div class="endorsing" id="endorsing3">
-										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing3');" onmouseover="generaterMouseOver('endorsing3');" onclick="generaterClickEndorse('endorsing3', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
+									<div class="endorsing" id="endorsing-3">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing-3');" onmouseover="generaterMouseOver('endorsing-3');" onclick="generaterClickEndorse('endorsing-', 'endorse-plus', 'endorse-minus', 3);"><i class="material-icons color-blue">add</i><p class="color-blue">Endorse</p>
 										</span>
-										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing3');" onmouseover="generaterMouseOver('endorsing3');" onclick="generaterClickEndorse('endorsing3', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing-3');" onmouseover="generaterMouseOver('endorsing-3');" onclick="generaterClickEndorse('endorsing-', 'endorse-minus', 'endorse-plus', 3);"><i class="material-icons color-blue">remove</i><p class="color-blue">Remove Endorsement</p></span>
 									</div>
 									<div class="endorsers-container">
-										<ul class="endorsers-pics">
+										<ul class="endorsers-pics" id="endorsers-pics-3">
 											<li>
 												<span>
 													<img src="images/avatar-images/avatar.png">
@@ -365,10 +365,10 @@
 											</a>
 										</span>
 									</span>
-									<div class="endorsing" id="endorsing4">
-										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i>
+									<div class="endorsing" id="endorsing-4">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing-4');" onmouseover="generaterMouseOver('endorsing-4');" onclick="generaterClickEndorse('endorsing-', 'endorse-plus', 'endorse-minus', 4);"><i class="material-icons color-blue">add</i>
 										</span>
-										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i></span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing-4');" onmouseover="generaterMouseOver('endorsing-4');" onclick="generaterClickEndorse('endorsing-', 'endorse-minus', 'endorse-plus', 4);"><i class="material-icons color-blue">remove</i></span>
 									</div>
 								</li>
 								<li class="endorse-item">
@@ -384,10 +384,10 @@
 											</a>
 										</span>
 									</span>
-									<div class="endorsing" id="endorsing4">
-										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-plus', 'endorse-minus');"><i class="material-icons color-blue">add</i>
+									<div class="endorsing" id="endorsing-5">
+										<span class="endorse-plus" onmouseout="generaterMouseOut('endorsing-5');" onmouseover="generaterMouseOver('endorsing-5');" onclick="generaterClickEndorse('endorsing-', 'endorse-plus', 'endorse-minus', 5);"><i class="material-icons color-blue">add</i>
 										</span>
-										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing4');" onmouseover="generaterMouseOver('endorsing4');" onclick="generaterClickEndorse('endorsing4', 'endorse-minus', 'endorse-plus');"><i class="material-icons color-blue">remove</i></span>
+										<span class="endorse-minus" onmouseout="generaterMouseOut('endorsing-5');" onmouseover="generaterMouseOver('endorsing-5');" onclick="generaterClickEndorse('endorsing-', 'endorse-minus', 'endorse-plus', 5);"><i class="material-icons color-blue">remove</i></span>
 									</div>
 								</li>
 								<li class="endorse-item">
