--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!--Custom Style-->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body id="home-body" class="center-align">
+<body class="center-align bg-first-page">
 	<div class="row white-text">
 		<div class="col m4 offset-m4">
 			<img src="images/logo.png" alt="logo" class="logo">
