--- a/home1.html
+++ b/home1.html
@@ -146,163 +146,9 @@
 			<div class="col m8">
 				<div class="card-panel">
 					<div class="panel-title">
-						Công việc nổi bật
+						Công việc đề xuất
 					</div>
-
 					<div class="panel-content">
-						<div class="job-box">
-							<div class="location-sticky">Hồ Chí Minh</div>
-							<div class="row none-margin-bottom">
-								<div class="col s3 center">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="responsive-img company-logo">
-									<a href="#" class="btn wave-effect wave-light">Follow</a>
-								</div>
-
-								<div class="col s9">
-									<h1 class="title">Tuyển 5 .NET Developer</h1>
-									<a href="#" class="company-name">Công ty cổ phần HP Computer</a>
-
-									<div class="job-info">
-										<div class="row">
-											<div class="col m6 none-padding-left">
-												<p>Lương: 
-													<span class="info">Thỏa thuận</span>
-												</p>
-											</div>
-											<div class="col m6 none-padding-left">
-												<span class="right">Ngày đăng: 
-													<span class="info">20/12/2016</span>
-												</span>
-											</div>
-											<div class="col m6 none-padding-left">
-												<p>Chức vụ: 
-													<span class="info">Developer</span>
-												</p>
-											</div>
-											<div class="col m6 none-padding-left">
-												<span class="right">Số lượng: 
-													<span class="info">5 người</span>
-												</span>
-											</div>
-										</div>
-										<div class="row">
-											<p class="col m12 none-padding-left">
-												Xây dựng các ứng dụng trên Android cho các hệ thống tài chính, Ngân hàng.Nghiên cứu, tìm kiếm giải pháp...
-											</p>
-											<div class="col m12 none-padding-left">
-												<a class="chip">Java</a>
-												<a class="chip">ASP.NET</a>
-												<a class="chip">SQL</a>
-												<a class="chip">English</a>
-												<a class="chip">University</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="job-box">
-							<div class="location-sticky">Hồ Chí Minh</div>
-							<div class="row none-margin-bottom">
-								<div class="col s3 center">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="responsive-img company-logo">
-									<a href="#" class="btn wave-effect wave-light">Follow</a>
-								</div>
-
-								<div class="col s9">
-									<h1 class="title">Tuyển 5 .NET Developer</h1>
-									<a href="#" class="company-name">Công ty cổ phần HP Computer</a>
-
-									<div class="job-info">
-										<div class="row">
-											<div class="col m6 none-padding-left">
-												<p>Lương: 
-													<span class="info">Thỏa thuận</span>
-												</p>
-											</div>
-											<div class="col m6 none-padding-left">
-												<span class="right">Ngày đăng: 
-													<span class="info">20/12/2016</span>
-												</span>
-											</div>
-											<div class="col m6 none-padding-left">
-												<p>Chức vụ: 
-													<span class="info">Developer</span>
-												</p>
-											</div>
-											<div class="col m6 none-padding-left">
-												<span class="right">Số lượng: 
-													<span class="info">5 người</span>
-												</span>
-											</div>
-										</div>
-										<div class="row">
-											<p class="col m12 none-padding-left">
-												Xây dựng các ứng dụng trên Android cho các hệ thống tài chính, Ngân hàng.Nghiên cứu, tìm kiếm giải pháp...
-											</p>
-											<div class="col m12 none-padding-left">
-												<a class="chip">Java</a>
-												<a class="chip">ASP.NET</a>
-												<a class="chip">SQL</a>
-												<a class="chip">English</a>
-												<a class="chip">University</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="job-box">
-							<div class="location-sticky">Hồ Chí Minh</div>
-							<div class="row none-margin-bottom">
-								<div class="col s3 center">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="responsive-img company-logo">
-									<a href="#" class="btn wave-effect wave-light">Follow</a>
-								</div>
-
-								<div class="col s9">
-									<h1 class="title">Tuyển 5 .NET Developer</h1>
-									<a href="#" class="company-name">Công ty cổ phần HP Computer</a>
-
-									<div class="job-info">
-										<div class="row">
-											<div class="col m6 none-padding-left">
-												<p>Lương: 
-													<span class="info">Thỏa thuận</span>
-												</p>
-											</div>
-											<div class="col m6 none-padding-left">
-												<span class="right">Ngày đăng: 
-													<span class="info">20/12/2016</span>
-												</span>
-											</div>
-											<div class="col m6 none-padding-left">
-												<p>Chức vụ: 
-													<span class="info">Developer</span>
-												</p>
-											</div>
-											<div class="col m6 none-padding-left">
-												<span class="right">Số lượng: 
-													<span class="info">5 người</span>
-												</span>
-											</div>
-										</div>
-										<div class="row">
-											<p class="col m12 none-padding-left">
-												Xây dựng các ứng dụng trên Android cho các hệ thống tài chính, Ngân hàng.Nghiên cứu, tìm kiếm giải pháp...
-											</p>
-											<div class="col m12 none-padding-left">
-												<a class="chip">Java</a>
-												<a class="chip">ASP.NET</a>
-												<a class="chip">SQL</a>
-												<a class="chip">English</a>
-												<a class="chip">University</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 						<div class="job-box">
 							<div class="location-sticky">Hồ Chí Minh</div>
 							<div class="row none-margin-bottom">
@@ -512,197 +358,70 @@
 			</div>
 			<div class="col m4">
 				<div class="card-panel">
-					<div class="panel-title">
-						Công ty nổi bật
-					</div>
+					<div class="panel-title">HOẠT ĐỘNG</div>
 					<div class="panel-content">
-						<div class="company-box">
-							<a href="#" class="follow-sticky">
-								Theo dõi
-							</a>
-							<div class="row">
-								<div class="col s9">
-									<h1 class="title">Công ty Tân Hiệp phát</h1>
-									<div class="small-text">
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">flag</i>Quốc gia: 
-											<span class="info">Mỹ</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">equalizer</i>Quy mô: 
-											<span class="info">200-500 người</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">web</i>Website: 
-											<span class="info">www.materialize.com</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">location_on</i>Địa chỉ: 
-											<span class="info">4/3 Đồ Sơn, P. 13, Quận Tân Bình, TP.HCM</span>
-										</p>
-									</div>
-								</div>
-								<div class="col s3">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="right responsive-img">
-								</div>
+						<div class="activity-box">
+							<p><a href="#">Công ty TNHH MTV</a> vừa đăng 1 <a href="">công việc</a> mới </p>
+							<p class="small-text">
+								Xây dựng các ứng dụng trên Android cho các hệ thống tài chính, Ngân hàng.Nghiên cứu, tìm kiếm giải pháp <a href="">xem thêm...</a>
+							</p>
+							<div class="row none-margin-bottom margin-top-5">
+								<i class="material-icons left">favorite</i>
+								<span class="small-text right">Hôm qua</span>
 							</div>
 						</div>
-						<div class="company-box">
-							<a href="#" class="follow-sticky">
-								Theo dõi
-							</a>
-							<div class="row">
-								<div class="col s9">
-									<h1 class="title">Công ty Tân Hiệp phát</h1>
-									<div class="small-text">
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">flag</i>Quốc gia: 
-											<span class="info">Mỹ</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">equalizer</i>Quy mô: 
-											<span class="info">200-500 người</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">web</i>Website: 
-											<span class="info">www.materialize.com</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">location_on</i>Địa chỉ: 
-											<span class="info">4/3 Đồ Sơn, P. 13, Quận Tân Bình, TP.HCM</span>
-										</p>
-									</div>
-								</div>
-								<div class="col s3">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="right responsive-img">
-								</div>
+						<div class="activity-box">
+							<p><a href="#">Công ty TNHH MTV</a> vừa đăng 1 hoạt động mới </p>
+							<p class="small-text">
+								Ngày hội việc làm sẽ được tổ chức ngày 20/4/2014, đăng ký tại <a href="#">www.abc.com</a>
+							</p>
+							<div class="row none-margin-bottom margin-top-5">
+								<i class="material-icons left">favorite</i>
+								<span class="small-text right">Hôm qua</span>
 							</div>
 						</div>
-						<div class="company-box">
-							<a href="#" class="follow-sticky">
-								Theo dõi
-							</a>
-							<div class="row">
-								<div class="col s9">
-									<h1 class="title">Công ty Tân Hiệp phát</h1>
-									<div class="small-text">
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">flag</i>Quốc gia: 
-											<span class="info">Mỹ</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">equalizer</i>Quy mô: 
-											<span class="info">200-500 người</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">web</i>Website: 
-											<span class="info">www.materialize.com</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">location_on</i>Địa chỉ: 
-											<span class="info">4/3 Đồ Sơn, P. 13, Quận Tân Bình, TP.HCM</span>
-										</p>
-									</div>
-								</div>
-								<div class="col s3">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="right responsive-img">
-								</div>
+						<div class="activity-box">
+							<p><a href="#">Công ty TNHH MTV</a> vừa đăng 1 hoạt động mới </p>
+							<p class="small-text">
+								Ngày hội việc làm sẽ được tổ chức ngày 20/4/2014, đăng ký tại <a href="#">www.abc.com</a>
+							</p>
+							<div class="row none-margin-bottom margin-top-5">
+								<i class="material-icons left">favorite</i>
+								<span class="small-text right">Hôm qua</span>
 							</div>
 						</div>
-						<div class="company-box">
-							<a href="#" class="follow-sticky">
-								Theo dõi
-							</a>
-							<div class="row">
-								<div class="col s9">
-									<h1 class="title">Công ty Tân Hiệp phát</h1>
-									<div class="small-text">
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">flag</i>Quốc gia: 
-											<span class="info">Mỹ</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">equalizer</i>Quy mô: 
-											<span class="info">200-500 người</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">web</i>Website: 
-											<span class="info">www.materialize.com</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">location_on</i>Địa chỉ: 
-											<span class="info">4/3 Đồ Sơn, P. 13, Quận Tân Bình, TP.HCM</span>
-										</p>
-									</div>
-								</div>
-								<div class="col s3">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="right responsive-img">
-								</div>
+						<div class="activity-box">
+							<p><a href="#">Công ty TNHH MTV</a> vừa đăng 1 hoạt động mới </p>
+							<p class="small-text">
+								Ngày hội việc làm sẽ được tổ chức ngày 20/4/2014, đăng ký tại <a href="#">www.abc.com</a>
+							</p>
+							<div class="row none-margin-bottom margin-top-5">
+								<i class="material-icons left">favorite</i>
+								<span class="small-text right">Hôm qua</span>
 							</div>
 						</div>
-						<div class="company-box">
-							<a href="#" class="follow-sticky">
-								Theo dõi
-							</a>
-							<div class="row">
-								<div class="col s9">
-									<h1 class="title">Công ty Tân Hiệp phát</h1>
-									<div class="small-text">
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">flag</i>Quốc gia: 
-											<span class="info">Mỹ</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">equalizer</i>Quy mô: 
-											<span class="info">200-500 người</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">web</i>Website: 
-											<span class="info">www.materialize.com</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">location_on</i>Địa chỉ: 
-											<span class="info">4/3 Đồ Sơn, P. 13, Quận Tân Bình, TP.HCM</span>
-										</p>
-									</div>
-								</div>
-								<div class="col s3">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="right responsive-img">
-								</div>
+						<div class="activity-box">
+							<p><a href="#">Công ty TNHH MTV</a> vừa đăng 1 hoạt động mới </p>
+							<p class="small-text">
+								Ngày hội việc làm sẽ được tổ chức ngày 20/4/2014, đăng ký tại <a href="#">www.abc.com</a>
+							</p>
+							<div class="row none-margin-bottom margin-top-5">
+								<i class="material-icons left">favorite</i>
+								<span class="small-text right">Hôm qua</span>
 							</div>
 						</div>
-						<div class="company-box">
-							<a href="#" class="follow-sticky">
-								Theo dõi
-							</a>
-							<div class="row">
-								<div class="col s9">
-									<h1 class="title">Công ty Tân Hiệp phát</h1>
-									<div class="small-text">
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">flag</i>Quốc gia: 
-											<span class="info">Mỹ</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">equalizer</i>Quy mô: 
-											<span class="info">200-500 người</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">web</i>Website: 
-											<span class="info">www.materialize.com</span>
-										</p>
-										<p class="col s12 none-padding-left">
-											<i class="material-icons prefix-icon">location_on</i>Địa chỉ: 
-											<span class="info">4/3 Đồ Sơn, P. 13, Quận Tân Bình, TP.HCM</span>
-										</p>
-									</div>
-								</div>
-								<div class="col s3">
-									<img src="images/Hewlett-Packard-Logo-200x200.png" class="right responsive-img">
-								</div>
+						<div class="activity-box">
+							<p><a href="#">Công ty TNHH MTV</a> vừa đăng 1 hoạt động mới </p>
+							<p class="small-text">
+								Ngày hội việc làm sẽ được tổ chức ngày 20/4/2014, đăng ký tại <a href="#">www.abc.com</a>
+							</p>
+							<div class="row none-margin-bottom margin-top-5">
+								<i class="material-icons left">favorite</i>
+								<span class="small-text right">Hôm qua</span>
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>		
 		</div>
